<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_marginLeft="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titre_conseil_diff_arc"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView11" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="307dp"
            android:id="@+id/layout_cons_scroll"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/titre_arc_long"
                android:id="@+id/textView12" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="228dp"
                    android:layout_height="193dp"
                    android:text="@string/txt_arc_long"
                    android:id="@+id/textView9" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/longbow"


                    />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/titre_arc_classique"
                android:id="@+id/textView14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="198dp"
                    android:text="@string/txt_arc_classique"
                    android:id="@+id/txt_arc_classique"
                    android:layout_weight="0.68" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/arclassique"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/titre_arc_pouli"
                android:id="@+id/textView15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:text="@string/txt_arc_pouli"
                    android:id="@+id/textView16"
                    android:layout_weight="0.72" />
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/pouli"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>